--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="Tune_Core_Search">
   <head>
+  <base href="/">
     <title>TuneCoreSearch</title>
     <%= csrf_meta_tags %>
 
