--- a/app/assets/Components/search/index.html.erb
+++ b/app/assets/Components/search/index.html.erb
@@ -1,6 +1,6 @@
 <h1>TuneCore Album Index</h1>
 
-<form ng-submit="submit(formData,event,lol)">
+<form ng-submit="submit(formData)">
 	<span>Artist:</span><br>
 	<input type="text" ng-model="formData.artist" name="artist" placeholder="Enter artist's name">
 	<br>
