working on associations

--- a/app/assets/Components/search/index.html.erb
+++ b/app/assets/Components/search/index.html.erb
@@ -2,11 +2,11 @@
 
 <form ng-submit="submit(formData)">
 	<span>Artist:</span><br>
-	<input type="text" ng-model="formData.artist" name="artist" placeholder="Enter artist's name">
+	<input type="text" ng-model="formData.artist" name="artist" placeholder="Enter an artist's name">
 	<br>
 	<span>Song:</span><br>
-	<input type="text" ng-model="formData.song" name="song" placeholder="Enter name of Song"><br>
+	<input type="text" ng-model="formData.song" name="song" placeholder="Enter the name of a Song"><br>
 	<span>Album:</span><br>
-	<input type="text" ng-model="formData.album" name="album" placeholder="Enter name of Album"><br>
+	<input type="text" ng-model="formData.album" name="album" placeholder="Enter the name of an Album"><br>
 	<input type="submit" value="Search">
 </form>
