--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html ng-app="Tune_Core_Search">
   <head>
   <base href="/">
-    <title>TuneCoreSearch</title>
+    <title>Song Search</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag  'application', media: 'all' %>
