just need to create tests

--- a/app/assets/stylesheets/index.css.scss.erb
+++ b/app/assets/stylesheets/index.css.scss.erb
@@ -7,7 +7,7 @@ body{
       rgba(100, 100, 100, .67)
     ),
     /* bottom, image */
-    url("music.jpeg") no-repeat center center fixed;
+    url(<%= asset_path 'music.jpeg' %>) no-repeat center center fixed;
     width: 95%;
 
 }
